--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/index.html" class="active-button">Главная</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/photo.html">Фото</a></li>
+				<li><a href="index.html" class="active-button">Главная</a></li>
+				<li><a class= "top_" href="photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
