--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a href="index.html" class="active-button">Главная</a></li>
-				<li><a class= "top_" href="photo.html">Фото</a></li>
+				<li><a href="C:/Users/Admin/Desktop/Diplom/index.html" class="active-button">Главная</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
-							<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/1.html">Медицинский уход</a>
-							<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 					</div>
 				</li>
-				<li><a class= "top_" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/prices.html">Цены</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/oformlenie.html">Оформление</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/contacts.html">Контакты</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/request.html">Отправить заявку</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>
 			</ul>
 		</nav>
 	</div>	
@@ -109,26 +109,32 @@
     <label class="menu__btn" for="menu__toggle"></label>
 
 	<ul class="menu__box">
+	
 	<input id="menu__toggle" type="checkbox" />
 	<div class="menu_b"><img src="img/hamburger-menu/close_menu.png" alt="HTML5" style="vertical-align: middle;"/></div>
     <label class="menu__b" for="menu__toggle"></label>
+	
 	<img src="img/hamburger-menu/close_menu.png" class="menu__box_img_close" onclick="myFunction()" alt="HTML5" style="vertical-align: middle;"/>
-		<li><a class="menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/index.html">Главная</a></li>
-		<li><a class= "menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/photo.html">Фото</a></li>
-			<li><a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
-				<div class="sub-menu1_mediaMyPhone"></div>
-					<div class="sub-menu_mediaMyPhone">
-						<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/1.html">Медицинский уход</a>
-						<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/2.html">Пансионат для инвалидов по зрению</a>
-						<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/3.html">Психоневрологический пансионат</a>
-						<a class= "top_0" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/4.html">Сестринский уход за пожилыми людьми</a>
-					</div>
+		
+		<li><a class="menu__item" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
+		<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
+			<li>
+				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
+				<div class="podmenu">
+					<div class="sub-menu1_mediaMyPhone"></div>
+						<div class="sub-menu_mediaMyPhone">
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
+						</div>
+				</div>
 				</a>
 			</li>
-			<li><a class= "menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/prices.html">Цены</a></li>
-			<li><a class= "menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/oformlenie.html">Оформление</a></li>
-			<li><a class= "menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/contacts.html">Контакты</a></li>
-			<li><a class= "menu__item" href="C:/Users/Admin/Documents/GitHub/MoskvinaAnastasia/request.html">Отправить заявку</a></li>		
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>		
    <table>
 		<tr>
 			<td>
@@ -692,7 +698,7 @@
 		<table>
 			<tr>
 				<div class = "img_ma_phone">
-					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="></a>
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc=">
 					<img src="img/footer/ma.png" width="65x" height="76px" alt="HTML5"/></div>
 			</tr>	
 		</table>
