--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<!-- <meta name="viewport" content="user-scalable=yes"> -->
-	<meta name="viewport" content="user-scalable=no">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width" content="user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/media320.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/media320.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/mediaMyPhone.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800|Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
@@ -698,7 +697,7 @@
 		<table>
 			<tr>
 				<div class = "img_ma_phone">
-					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc=">
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="></a>
 					<img src="img/footer/ma.png" width="65x" height="76px" alt="HTML5"/></div>
 			</tr>	
 		</table>
