--- a/photo.html
+++ b/photo.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<!-- <meta name="viewport" content="user-scalable=yes"> -->
-	<meta name="viewport" content="user-scalable=no">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width" content="user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/media320.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/media320.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/mediaMyPhone.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800|Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
@@ -27,6 +26,7 @@
 	<!-- Подключение jQuery плагина Masked Input -->
 	<script src="js/jquery.maskedinput.min.js"></script>
 </head>
+
 <body>
 
 <div class="header">
@@ -35,11 +35,11 @@
 	</div>
 </div>
 
-	<!-- Шапка -->
+<!-------------- Шапка ------------------->
 <header class="header_">
 		<div class="container">
 			<div class="header_inner">
-				<a href="index.html"><img class="header_item" src="img/logo/logo.png" alt="HTML5"></a>
+				<a href="index.html"><img class="header_item_logo" src="img/logo/logo.png" alt="HTML5"></a>
 				<div class="header_item">
 					<p class="header_text header_text1" >
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -60,6 +60,7 @@
 					</p>
 				</div>					
 			</div>
+			
 			<div class = "strip_header"></div>				
 					<div class="header_text4">
 						Московская область, Одинцовский<br>район, дер. Марьино, ул. Южная, д.3
@@ -103,20 +104,26 @@
     <label class="menu__btn" for="menu__toggle"></label>
 
 	<ul class="menu__box">
+	
 	<input id="menu__toggle" type="checkbox" />
 	<div class="menu_b"><img src="img/hamburger-menu/close_menu.png" alt="HTML5" style="vertical-align: middle;"/></div>
     <label class="menu__b" for="menu__toggle"></label>
+	
 	<img src="img/hamburger-menu/close_menu.png" class="menu__box_img_close" onclick="myFunction()" alt="HTML5" style="vertical-align: middle;"/>
+		
 		<li><a class="menu__item" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
 		<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
-			<li><a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
-				<div class="sub-menu1_mediaMyPhone"></div>
-					<div class="sub-menu_mediaMyPhone">
-						<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
-						<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
-						<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
-						<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
-					</div>
+			<li>
+				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
+				<div class="podmenu">
+					<div class="sub-menu1_mediaMyPhone"></div>
+						<div class="sub-menu_mediaMyPhone">
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
+						</div>
+				</div>
 				</a>
 			</li>
 			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
@@ -145,11 +152,15 @@
 	<div class="container">
 		<div class="message_text">Фото</div>
 		<!-- <img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
+		<div class="message_text1">Фото</div>
+		
 		<div class="message1_img_phone">
 		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
 		<div class="message1_text_phone">Фото</div>
 	</div>
 </div>
+
+
 
 
 <div class="photo_table">
@@ -355,6 +366,104 @@ var h_hght1 = 0; // высота шапки
 					</div>
 				</td>
 			</tr>
+		</table>
+	</div>
+</div>
+
+<div class = "footer_phone">
+	<div class="container">	
+		<table>
+			<tr>
+				<div class = "img_ma_phone">
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="></a>
+					<img src="img/footer/ma.png" width="65x" height="76px" alt="HTML5"/></div>
+			</tr>	
+		</table>
+		
+		<table>
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone1">Контакты</div>
+				</td>
+			</tr>
+		</table>
+		<table>	
+			<tr>
+				<td>
+					<div class = "img_strip_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		
+		<table class="contacts_footer_phone">
+			<tr>		
+				<td>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/gps.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+								<div class="_phone">
+								<span style="vertical-align: middle;">Московская область,<br>Одинцовский район, дер.<br>Марьино, ул. Южная, д.</span></div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/phone.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone1">
+								<span style="vertical-align: middle;">Моб: +7 (915) 212-28-19</span></div>
+									</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="img_footer">
+								<img src="img/footer/1message.png" alt="HTML5" style="vertical-align: middle;"/>
+							</td>
+							<td>
+							<div class="_phone">
+								<span style="vertical-align: middle;">dom-prestarelyh@bk.ru</span></div>
+								</div>
+							</td>
+						</tr>	
+				</td>
+			</tr>
+		</table>
+		
+		<table>		
+			<tr>
+				<td>
+					<div class = "TheMainThing_footer_phone2">Мы в соц сетях</div></div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div class = "img_strip1_phone">
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
+				</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<td>
+					<div class = "social_footer_phone">
+						<div class="img_icon_footer_phone">
+						<a href="https://www.facebook.com/grandpa.filipych">
+							<img src="img/footer/f_icon.png" width="35x" height="35px"/></a>
+						<a href="https://vk.com/club155151679">
+							<img src="img/footer/vk_icon.png" width="35x" height="35px"/></a>
+						<a href="https://ok.ru/filipych">
+							<img src="img/footer/o_icon.png" width="35x" height="35px"/></a>
+						</div>
+					</div>
+				</td>
+			</tr>	
 		</table>
 	</div>
 </div>
